# diffpssi

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt
examples/models/custom_multi_machine/: custom_model_optimization.py  custom_model_simulation.py  custom_multi_machine.py  custom_multi_machine_model.py  custom_multi_machine_opt.py  custom_multi_machine_opt_pf.py  custom_multi_machine_sim.py  multi_machine_opt_pf.py
examples/models/ibb_manual/: ibb_manual_sim.py
examples/models/ibb_model/: ibb_model.py  ibb_opt.py  ibb_opt_pf.py  ibb_sim.py
examples/models/ibb_transformer/: ibb_trans_model.py  ibb_trans_sim.py
examples/models/ibb_with_controllers/: ibb_wc_model.py  ibb_wc_sim.py
examples/models/ieee_9bus/: ieee_9bus.py  ieee_9bus_model.py  ieee_9bus_opt.py  ieee_9bus_opt_pf.py  ieee_9bus_sim.py  ieee_9bus_validate.py
examples/models/k2a/: k2a_model.py  k2a_opt.py  k2a_sim.py  k2a_validate.py
examples/models/k2a_manual/: k2a_manual_sim.py
optimization_lib/: optimizers.py  ps_optimization.py
pf_util/: pf_tools.py
power_sim_lib/: load_flow.py  simulator.py  solvers.py
power_sim_lib/models/: avrs.py  backend.py  blocks.py  exciters.py  generic_dynamic_model.py  governors.py  stabilizers.py  static_models.py  synchronous_machine.py
src/diffpssi/optimization_lib/: optimizers.py  ps_optimization.py
src/diffpssi/power_sim_lib/: backend.py  load_flow.py  simulator.py  solvers.py
tests/integration/: test_correct_backend.py  test_example_opts.py  test_example_sims.py  test_parallel_sims.py
tools/: colors.py
(+40 files in other folders)
