[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "diffpssi"
version = "0.0.1"
authors = [
  { name="Georg Kordowich", email="georg.kordowich@fau.de" },
]
description = "A differentiable power system simulation tool"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/georgkordowich/diffpssi"
Issues = "https://github.com/georgkordowich/diffpssi/issues"